# kotobase

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  SECURITY.md  index.html  objects.inv  sitemap.xml
.github/: CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/scripts/: upload_drive.py
.github/workflows/: build-docs.yaml  build_db.yaml  build_upload_db.yaml  docs.yaml  quality.yaml  release.yaml
API/: index.html
CLI/: index.html
CLI _Code/: index.html
Data_Mappers/: index.html
Database_Tables/: index.html
database/: index.html
datatypes/: index.html
docs/: CONTRIBUTING.md  README.md
docs-site/: mkdocs.yml  requirements.txt
docs-site/docs/: .nav.yml  API.md  CLI _Code.md  CLI.md  Data_Mappers.md  Database_Tables.md  database.md  datatypes.md  examples.md  index.md  repos.md  usage.md
docs-site/docs/assets/: kb_theme.css
docs-site/docs/project/: changelog.md  contributing.md  notice.md  versioning.md
docs-site/docs/reference/: api.md  cli.md  exceptions.md  index.md  terminal_output.md
docs-site/docs/reference/db/: connection.md  dtos.md  index.md  models.md  repos.md  uow.md
docs-site/docs/reference/db/builder/: build.md  config.md  download.md  extractors.md  index.md
docs/licenses/: CC-BY-2.0-FR.txt  CC-BY-4.0.txt  CC-BY-SA-4.0.txt  NOTICE.md
kotobase/: LICENSE  MANIFEST.in  README.md  pyproject.toml
kotobase/src/kotobase/: __init__.py  api.py  cli.py  exceptions.py  terminal_output.py
kotobase/src/kotobase/core/: __init__.py  datatypes.py
kotobase/src/kotobase/data/: __init__.py
kotobase/src/kotobase/data/jlpt/: grammar_n1.json  grammar_n2.json  grammar_n3.json  grammar_n4.json  grammar_n5.json  kanji_n1.json  kanji_n2.json  kanji_n3.json  kanji_n4.json  kanji_n5.json  vocab_n1.json  vocab_n2.json  vocab_n3.json  vocab_n4.json  vocab_n5.json
kotobase/src/kotobase/db/: __init__.py  connection.py  database.py  dtos.py  models.py  repos.py  uow.py
kotobase/src/kotobase/db/builder/: __init__.py  build.py  config.py  download.py  extractors.py
kotobase/src/kotobase/db_builder/: __init__.py  build_database.py  config.py  download.py  process_jmdict.py  process_jmnedict.py  process_kanjidic.py  process_tatoeba.py  pull.py
kotobase/src/kotobase/repos/: __init__.py  jlpt.py  jmdict.py  jmnedict.py  kanji.py  sentences.py
kotobase/tests/: conftest.py  test_api.py  test_cli.py  test_dtos.py  test_exceptions.py
repos/: index.html
scripts/: sync_meta.py
search/: search_index.json
usage/: index.html
